tests/test_input_files/good/test_good_return_stmt_2.punkt
function f <> -> void {
	return.
}

main {
	call f().
}
