tests/test_input_files/bad/test_bad_return_stmt_2.punkt
function f <> -> int {
	return.
}

main {
	f().
}
